<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.hospitalsx.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_editar"
        android:name="com.example.hospitalsx.ui.editar.EditarFragment"
        android:label="@string/menu_editar"
        tools:layout="@layout/fragment_editar" />

    <fragment
        android:id="@+id/nav_eliminar"
        android:name="com.example.hospitalsx.ui.eliminar.EliminarFragment"
        android:label="@string/menu_eliminar"
        tools:layout="@layout/fragment_eliminar" />

    <fragment
        android:id="@+id/nav_listar"
        android:name="com.example.hospitalsx.ui.listar.ListarFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_listar" />

    <fragment
        android:id="@+id/nav_crear"
        android:name="com.example.hospitalsx.ui.crear.CrearFragment"
        android:label="@string/menu_crear"
        tools:layout="@layout/fragment_crear" />

    <fragment
        android:id="@+id/nav_acercade"
        android:name="com.example.hospitalsx.ui.acercade.AcercaDeFragment"
        android:label="@string/menu_acercade"
        tools:layout="@layout/fragment_acerca_de" />

</navigation>