<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eliminar.EliminarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_eliminar"
                android:textSize="30sp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/ivELFoto"
                android:layout_width="190dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_menu_camera"
                android:contentDescription="@string/descripcion"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etELID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/id"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnELBuscar"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="0dp"
                    android:layout_weight="2"
                    android:text="@string/buscar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtELarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_medica"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtELmedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medico"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtELnombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtELgenero"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/genero"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtELfechaingreso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_ingreso"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtELestatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estatura"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtELpeso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peso"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEDlimpiar"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/limpiar"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnEDguardar"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/guardar"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>