<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.crear.CrearFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_crear"
            android:textSize="30sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/ivcFoto"
            android:layout_width="190dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_menu_camera"
            android:contentDescription="@string/descripcion"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spnCareaP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/spnCdoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spnCgenero"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="206dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCFechaIngresoP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fecha_ingreso"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/ibtnCFechaIngreso"
                android:layout_margin="5dp"
                android:layout_width="100sp"
                android:layout_height="70sp"
                android:src="@drawable/ic_menu_gallery"
                android:contentDescription="@string/descripcion"
                android:layout_weight="1"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCEdad"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edad"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCEstatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estatura"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCPeso"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClimpiar"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpiar"/>

            <Button
                android:id="@+id/btnCguardar"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guardar"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>