<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editar.EditarFragment">



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_editar"
            android:textSize="30sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/ivEDFoto"
            android:layout_width="190dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_menu_camera"
            android:contentDescription="@string/descripcion"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEDID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnEDBuscar"
                android:layout_margin="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/buscar"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spnEDareaP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/spnEDdoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEDnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spnEgenero"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="206dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEDFechaIngresoP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fecha_ingreso"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/ibtnEDFechaIngreso"
                android:layout_margin="5dp"
                android:layout_width="100sp"
                android:layout_height="70dp"
                android:src="@drawable/ic_menu_gallery"
                android:contentDescription="@string/descripcion"
                android:layout_weight="1"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEDEdad"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edad"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEDestatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estatura"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEDPeso"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEDlimpiar"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpiar"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnEDguardar"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guardar"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>